Migrated from deprecated Docker-Compose-Junit to Testcontainers